JumpScript/tests/baselines/reference/switchCases.errors.txt
tests/cases/compiler/switchCases.jump(2,7): error TS2678: Type '1' is not comparable to type '0'.


==== tests/cases/compiler/switchCases.jump (1 errors) ====
    switch(0) {
     case 1:
          ~
!!! error TS2678: Type '1' is not comparable to type '0'.
     break;
    }
    